# tour_house_avaliacao_tecnica_backend

./: .dockerignore  .env.exemple.txt  .gitignore  Dockerfile  Documentação dos Testes.md  ITMSS Recursos Humanos - Cadastro API.postman_collection.json  ITMSS Recursos Humanos - Cadastro API.yaml  README.md  docker-compose.yaml  pyproject.toml
core/: settings.py  urls.py
departamentos/: models.py  serializers.py  views.py
departamentos/migrations/: 0001_initial.py
empresas/: models.py  views.py
empresas/migrations/: 0001_initial.py
funcionarios/: admin.py  models.py  views.py
funcionarios/management/commands/: popular_tabelas.py
funcionarios/migrations/: 0001_initial.py  0002_alter_funcionario_data_demissao.py
tests/: conftest.py  test_admin_login.py  test_auth.py  test_departamentos_admin.py  test_departamentos_user.py  test_empresas_admin.py  test_empresas_user.py  test_funcionarios_admin.py  test_funcionarios_user.py  test_users.py
utils/: coverage-report.py  permissions.py
