[tool.poetry]
name = "desafio"
version = "0.1.0"
description = ""
authors = ["fspjonny <fabiosilvapedro@yahoo.com.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
python-decouple = "^3.8"
pytest = "^8.3.3"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "python manage.py runserver"
test = "pytest"