[tool.poetry]
name = "desafio"
version = "0.1.0"
description = ""
authors = ["fspjonny <fabiosilvapedro@yahoo.com.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"
whitenoise = "^6.8.2"

# Caso precise das dependências de desenvolvimento no seu ambiente, execute o comando:
# poetry install --with dev
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"
taskipy = "^1.14.0"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests*.py", "test_*.py", "*_tests.py"]
addopts = '-p no:warnings'

[tool.taskipy.tasks]
test = {cmd='pytest -s -x --cov=tests -vv', help='- Executa os testes.'}
post-test = {cmd='coverage html && python utils/coverage-report.py', help='- Exibe relatório de cobertura.'}
